<resources>
    <string name="app_name">Guess The Number</string>
    <string name="info">Please select a number of digits.
    The number of digits that I keep in my mind and
    the number of digit you choose will be the same. Also,
    never forget that you have 10 rights.</string>
    <string name="two_digits_number">Two Digits Number</string>
    <string name="three_digits_number">Three Digits Number</string>
    <string name="four_digits_number">Four Digits Number</string>
    <string name="start">START</string>
</resources>